[package]
name = "crate-template"
version = "0.1.0"
authors = ["wangliqiu <wangviviying@163.com>"]
edition = "2021"


[dependencies]
# -----------------------------------------------------------------------------------------------------------
pretty_assertions = "1.2"

# -----------------------------------------------------------------------------------------------------------
flate2 = "1.0"
tar = "0.4"
ring ="0.17.0-alpha.11"
data-encoding = "2.3"   # base64, base32, hex and so on




[dev-dependencies]
# apt-get install gnuplot
criterion = "0.3"


#[[bench]]
#name = "criterion_bench"
#harness = false # `libtest` harness is disabled

